--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,11 @@
     <dimen name="_24dp">24dp</dimen>
     <dimen name="_16dp">16dp</dimen>
     <dimen name="_16sp">16sp</dimen>
+    <dimen name="_5dp">5dp</dimen>
+    <dimen name="_14sp">14sp</dimen>
+    <dimen name="_10dp">10dp</dimen>
+    <dimen name="_8sp">8sp</dimen>
+    <dimen name="_0dp">0dp</dimen>
+    <dimen name="_15dp">15dp</dimen>
+    <dimen name="_1dp">1dp</dimen>
 </resources>
