--- a/app/src/main/res/layout/currency_main_item_view.xml
+++ b/app/src/main/res/layout/currency_main_item_view.xml
@@ -8,14 +8,14 @@
     android:elevation="@dimen/_10dp"
     app:cardCornerRadius="@dimen/_15dp">
 
-    <LinearLayout
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="@dimen/_10dp"
         >
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/dateTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -29,5 +29,5 @@
             android:id="@+id/detailRV"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-    </LinearLayout>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 </com.google.android.material.card.MaterialCardView>
