--- a/app/src/main/res/layout/detail_item.xml
+++ b/app/src/main/res/layout/detail_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
@@ -7,7 +7,7 @@
     android:layout_margin="@dimen/_5dp"
     android:orientation="vertical">
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/currency"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -16,7 +16,7 @@
         android:textAlignment="gravity"
         android:textSize="@dimen/_14sp" />
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -25,4 +25,4 @@
         android:fontFamily="@font/alegreya_sans_sc"
         android:textSize="12sp" />
 
-</LinearLayout>
+</androidx.appcompat.widget.LinearLayoutCompat>
